tests/lox/errors/parse_stmt_errors.lox
fun 1(1);
fun add(1);
fun add{;
fun add(a,);
fun add(a,b};
fun add(a, b) {);
// err: One or more errors occurred during parsing the expression:
// err: [at column 5 in line 1] ParseError: Expected function name, found Number(1.0)
// err: [at column 9 in line 2] ParseError: Expected a parameter name, found Number(1.0)
// err: [at column 8 in line 3] ParseError: Expected '(' after function name, found LeftBrace
// err: [at column 11 in line 4] ParseError: Expected a parameter name, found RightParen
// err: [at column 12 in line 5] ParseError: Expected ')' after parameters, found RightBrace
// err: [at column 16 in line 6] ParseError: Unexpected token RightParen found